--- a/src/assets/sass/styleguide/styleguide.scss
+++ b/src/assets/sass/styleguide/styleguide.scss
@@ -745,7 +745,7 @@
             position: fixed;
             top: 0;
             width: 100%;
-            z-index: 1;
+            z-index: $sg-z-index-header;
 
             .sg-l-wrapper {
                 padding-right: 0;
